--- a/client/scss/layout/_footer.scss
+++ b/client/scss/layout/_footer.scss
@@ -18,8 +18,16 @@
   }
 
   &__logo {
-    width: 15rem;
+    max-width: 30%;
     height: auto;
+
+    @media only screen and (max-width: $bp-1000) {
+      max-width: 40%;
+    }
+
+    @media only screen and (max-width: $bp-600) {
+      max-width: 60%;
+    }
   }
 
   &__navigation {
@@ -58,7 +66,7 @@
     &:active {
       color: $color-primary;
       box-shadow: 0 1rem 2rem rgba($color-black, 0.4);
-      transform: rotate(-5deg) scale(1.3);
+      // transform: rotate(-5deg) scale(1.3);
     }
   }
 
